correct alignment and background colors in results table

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -464,7 +464,6 @@ a.accordion-title.populations {
         margin-right: -10em;
       }
       &.freeze {
-        background: white;
         position: sticky;
         left: 65px;
         z-index: 1;
